build: align project with Java 21 (LTS) while allowing newer JDKs
- Revert JavaFX version to 21 in FXML files
- Update GitHub Actions to use JDK 21
- Add maven-enforcer-plugin to require JDK 21+ for development
- Update README and VSCode settings for Java 21 compatibility
- Clean up deprecated documentation